--- a/src/app/pages/event-mgmt-page/event-mgmt-page.component.html
+++ b/src/app/pages/event-mgmt-page/event-mgmt-page.component.html
@@ -43,7 +43,7 @@
     <!-- Search -->
     <div class="search-btn">
       <div class="new-evnt-btn">
-          <button mat-raised-button color="primary"> + New Event</button>
+          <button mat-raised-button color="primary" [routerLink]="['/add-event']"> + New Event</button>
       </div>
     </div>
     <!-- Table -->
