added toolbar to pages

--- a/src/app/pages/add-event-page/add-event-page.component.html
+++ b/src/app/pages/add-event-page/add-event-page.component.html
@@ -1,3 +1,5 @@
+<app-toolbar [pageName] = "pageName"></app-toolbar>
+<br>
 <div class="page">
   <mat-card class="card">
     <mat-card-header class="header">
