--- a/src/app/pages/attendee-profile/attendee-profile.component.html
+++ b/src/app/pages/attendee-profile/attendee-profile.component.html
@@ -1,4 +1,5 @@
-
+<app-toolbar [pageName] = "pageName"></app-toolbar>
+<br>
 <div class="page">
   <mat-card class="card">
     <mat-card-header class="header">
