--- a/src/app/pages/attendees/attendees.component.html
+++ b/src/app/pages/attendees/attendees.component.html
@@ -1,3 +1,5 @@
+<app-toolbar [pageName] = "pageName"></app-toolbar>
+<br>
 <div class="page-container">
   <button class="addNewBotton" mat-raised-button color="primary" [routerLink]="['./attendee-profile']"> + New Attendee </button>
   <div class="grid-content">
