--- a/src/app/pages/attendees/attendees.component.html
+++ b/src/app/pages/attendees/attendees.component.html
@@ -1,7 +1,10 @@
-<app-toolbar [pageName] = "pageName"></app-toolbar>
-<br>
+<app-toolbar [pageName] = "pageName" (navbarToggle) = "toggleNav()"></app-toolbar>
 <div class="page-container">
-  <button class="addNewBotton" mat-raised-button color="primary" [routerLink]="['./attendee-profile']"> + New Attendee </button>
+  <div class="new-button-container">
+    <button class="new-button" mat-raised-button color="primary"
+            [routerLink]="['./attendee-profile']"> + New Attendee </button>
+  </div>
+
   <div class="grid-content">
     <mat-card *ngFor="let attendee of attendeesList.attendees" class="card">
       <div class="img-center">
