--- a/src/app/pages/event-mgmt-page/event-mgmt-page.component.scss
+++ b/src/app/pages/event-mgmt-page/event-mgmt-page.component.scss
@@ -1,3 +1,10 @@
+:host{
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
 .top-btn{
     float:right;
     color: gray;
@@ -94,7 +101,6 @@
 
   .search-btn {
     min-height: 64px;
-    padding: 8px 24px 0;
   }
 
   .new-evnt-btn{
