added toolbar to home page and attendees page

--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -1,5 +1,30 @@
 <app-toolbar [pageName] = "pageName"></app-toolbar>
-<mat-sidenav-container>
-  <mat-sidenav mode="side" opened>Sidenav content</mat-sidenav>
-  <mat-sidenav-content>Main content</mat-sidenav-content>
+<mat-sidenav-container class="sidenav-container">
+  <mat-sidenav mode="side" opened class="sidenav">
+    <div class="sidediv" >
+      <button mat-raised-button color="primary" class="sidebutton">home</button>
+    </div>
+    <div class="sidediv" >
+      <button mat-button class="sidebutton">Speaker</button>
+    </div>
+    <div class="sidediv" >
+      <button mat-button class="sidebutton">Attendees</button>
+    </div>
+    <div class="sidediv" >
+      <button mat-button class="sidebutton">Locations</button>
+    </div>
+    <div class="sidediv" >
+      <button mat-button class="sidebutton">Sponsors</button>
+    </div>
+    <div class="sidediv" >
+      <button mat-button class="sidebutton">About</button>
+    </div>
+
+  </mat-sidenav>
+  <mat-sidenav-content class="sidenav-content">
+    Main content
+    <br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br>
+  </mat-sidenav-content>
 </mat-sidenav-container>
