--- a/src/app/components/toolbar/toolbar.component.scss
+++ b/src/app/components/toolbar/toolbar.component.scss
@@ -1,6 +1,12 @@
 .toolbar{
     // border-bottom: solid 1px lightgray;
+    position: fixed;
+    top: 0;
+    left:0;
+    width:100%;
     height: 3em;
+    z-index:100;
+
     .front-spacer{
       flex: 0.1;
     }
