--- a/src/app/pages/event-mgmt-page/event-mgmt-page.component.html
+++ b/src/app/pages/event-mgmt-page/event-mgmt-page.component.html
@@ -1,62 +1,64 @@
 <app-toolbar (viewChange) = "changeView($event)" [pageName] = "pageName"></app-toolbar>
-<div class="grid" *ngIf="isGrid; else listView">
-  <mat-card *ngFor="let event of items.events" class="card"  >
-    <i class="material-icons event-icon" (click)="onSelect($event)" id="{{event.id}}">event</i>
-    <div class="event-title">{{event.name}}</div>
-    <table class="content">
-      <!-- <tr>
-        <th width="20%">id:</th>
-        <td width="80%">{{event.id}}</td>
-      </tr> -->
-      <tr>
-        <th>date:</th>
-        <td>{{event.date}}</td>
-      </tr>
-      <tr>
-        <th>venue:</th>
-        <td>{{event.venue}}</td>
-      </tr>
-      <tr>
-        <th>Description:</th>
-        <td>{{event.description}}</td>
-      </tr>
-    </table>
-    <mat-card-actions class="foot">
-      <!-- <i class="material-icons">create</i> -->
-      <i class="material-icons">delete</i>
-    </mat-card-actions>
-  </mat-card>
-  <div class="add-event" [routerLink]="['/add-event']">
-    <div class="plus">+</div>
-  </div>
-</div>
-
-<ng-template #listView>
-  <div class="list">
-    <div class="search-btn">
-      <div class="new-evnt-btn">
-          <button mat-raised-button color="primary"> + New Event</button>
-      </div>
+<div class="page">
+  <div class="grid" *ngIf="isGrid; else listView">
+    <mat-card *ngFor="let event of items.events" class="card"  >
+      <i class="material-icons event-icon" (click)="onSelect($event)" id="{{event.id}}">event</i>
+      <div class="event-title">{{event.name}}</div>
+      <table class="content">
+        <!-- <tr>
+          <th width="20%">id:</th>
+          <td width="80%">{{event.id}}</td>
+        </tr> -->
+        <tr>
+          <th>date:</th>
+          <td>{{event.date}}</td>
+        </tr>
+        <tr>
+          <th>venue:</th>
+          <td>{{event.venue}}</td>
+        </tr>
+        <tr>
+          <th>Description:</th>
+          <td>{{event.description}}</td>
+        </tr>
+      </table>
+      <mat-card-actions class="foot">
+        <!-- <i class="material-icons">create</i> -->
+        <i class="material-icons">delete</i>
+      </mat-card-actions>
+    </mat-card>
+    <div class="add-event" [routerLink]="['/add-event']">
+      <div class="plus">+</div>
     </div>
-    <mat-table #table [dataSource]="dataSource">
-      <ng-container matColumnDef="name">
-        <mat-header-cell *matHeaderCellDef> Name </mat-header-cell>
-        <mat-cell *matCellDef="let element" [routerLink] = "['/home']"> {{element.name}} </mat-cell>
-      </ng-container>
-      <ng-container matColumnDef="date">
-        <mat-header-cell *matHeaderCellDef> Date </mat-header-cell>
-        <mat-cell *matCellDef="let element"> {{element.date}} </mat-cell>
-      </ng-container>
-      <ng-container matColumnDef="venue">
-        <mat-header-cell *matHeaderCellDef> Venue </mat-header-cell>
-        <mat-cell *matCellDef="let element"> {{element.venue}} </mat-cell>
-      </ng-container>
-      <ng-container matColumnDef="description">
-        <mat-header-cell *matHeaderCellDef> Description </mat-header-cell>
-        <mat-cell *matCellDef="let element"> {{element.description}} </mat-cell>
-      </ng-container>
-      <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-      <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
-    </mat-table>
   </div>
-</ng-template>
+
+  <ng-template #listView>
+    <div class="list">
+      <div class="search-btn">
+        <div class="new-evnt-btn">
+            <button mat-raised-button color="primary"> + New Event</button>
+        </div>
+      </div>
+      <mat-table #table [dataSource]="dataSource">
+        <ng-container matColumnDef="name">
+          <mat-header-cell *matHeaderCellDef> Name </mat-header-cell>
+          <mat-cell *matCellDef="let element" [routerLink] = "['/home']"> {{element.name}} </mat-cell>
+        </ng-container>
+        <ng-container matColumnDef="date">
+          <mat-header-cell *matHeaderCellDef> Date </mat-header-cell>
+          <mat-cell *matCellDef="let element"> {{element.date}} </mat-cell>
+        </ng-container>
+        <ng-container matColumnDef="venue">
+          <mat-header-cell *matHeaderCellDef> Venue </mat-header-cell>
+          <mat-cell *matCellDef="let element"> {{element.venue}} </mat-cell>
+        </ng-container>
+        <ng-container matColumnDef="description">
+          <mat-header-cell *matHeaderCellDef> Description </mat-header-cell>
+          <mat-cell *matCellDef="let element"> {{element.description}} </mat-cell>
+        </ng-container>
+        <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+        <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+      </mat-table>
+    </div>
+  </ng-template>
+</div>
