--- a/src/app/pages/attendees/attendees.component.scss
+++ b/src/app/pages/attendees/attendees.component.scss
@@ -1,6 +1,6 @@
 .sidenav-container{
   margin-top:3em;
-  min-height: 35em;
+  height: 100%;
 }
 .sidenav{
   width: 15em;
@@ -19,9 +19,35 @@
   }
 }
 .sidenav-content{
-  margin-top:3em;
+  //margin-top:3em;
 }
-
+.mat-column-avatar{
+  flex: 0 0 100px;
+}
+.mat-column-uuid{
+  flex: 0 0 80px;
+}
+.mat-column-name{
+  flex: 0 0 100px;
+  padding-right: 15px;
+}
+.mat-column-position{
+  flex: 0 0 200px;
+  padding-right: 15px;
+}
+.mat-column-organization{
+  flex: 0 0 200px;
+  padding-right: 15px;
+}
+.img{
+  width: 40%;
+}
+.edit-dele-button{
+  margin: 2px;
+}
+.material-icons{
+  color: green;
+}
 .page-container{
   margin: 1em;
   display: flex;
