--- a/src/app/pages/speaker/speaker.component.html
+++ b/src/app/pages/speaker/speaker.component.html
@@ -3,10 +3,10 @@
 <mat-sidenav-container class="sidenav-container">
   <mat-sidenav mode="side" opened class="sidenav">
     <div class="sidediv" >
-      <button mat-raised-button color="primary" class="sidebutton" [routerLink]="['/home']">Home</button>
+      <button mat-button class="sidebutton" [routerLink]="['/home']">Home</button>
     </div>
     <div class="sidediv" >
-      <button mat-button class="sidebutton" [routerLink]="['/speaker']">Speaker</button>
+      <button mat-raised-button color="primary" class="sidebutton" [routerLink]="['/speaker']">Speaker</button>
     </div>
     <div class="sidediv" >
       <button mat-button class="sidebutton" [routerLink]="['/attendees']">Attendees</button>
@@ -23,7 +23,7 @@
 
   </mat-sidenav>
   <mat-sidenav-content class="sidenav-content">
-    Main content
+    speaker works!
     <br><br><br><br><br><br><br><br>
     <br><br><br><br><br><br><br><br>
     <br><br><br><br><br><br><br><br>
