--- a/src/app/pages/attendee-profile/attendee-profile.component.html
+++ b/src/app/pages/attendee-profile/attendee-profile.component.html
@@ -1,109 +1,139 @@
 <app-toolbar [pageName] = "pageName"></app-toolbar>
 <br>
-<div class="page">
-  <mat-card class="card">
-    <mat-card-header class="header">
-      <h4>Edit Attendee's Particular</h4>
-    </mat-card-header>
-    <mat-card-content class="content">
-      <form class="form" action="index.html" method="post">
+<mat-sidenav-container class="sidenav-container">
+  <!-- Navigation Bar-->
+  <mat-sidenav mode="side" opened class="sidenav">
+    <div class="sidediv" >
+      <button mat-button class="sidebutton" [routerLink]="['/home']">Home</button>
+    </div>
+    <div class="sidediv" >
+      <button mat-button class="sidebutton" [routerLink]="['/speaker']">Speaker</button>
+    </div>
+    <div class="sidediv" >
+      <button mat-raised-button color="primary" class="sidebutton" [routerLink]="['/attendees']">Attendees</button>
+    </div>
+    <div class="sidediv" >
+      <button mat-button class="sidebutton" [routerLink]="['/map']">Locations</button>
+    </div>
+    <div class="sidediv" >
+      <button mat-button class="sidebutton" [routerLink]="['/go-live']">Go Live</button>
+    </div>
+    <div class="sidediv" >
+      <button mat-button class="sidebutton" [routerLink]="['/about']">About</button>
+    </div>
+  </mat-sidenav>
 
-        <mat-form-field class="">
-          <mat-label>Name</mat-label>
-          <input matInput class="" type="text" name="" value="" placeholder="{{sth}}">
-        </mat-form-field>
+  <!-- Main Content-->
+  <mat-sidenav-content class="sidenav-content">
+    <div class="page">
+      <!-- Back Button-->
+      <div class="header">
+        <mat-icon [routerLink]="['/attendees']">arrow_back</mat-icon>
+        <b>   Edit Attendee's Particular  </b>
+      </div>
+      <!-- Form Fields-->
+      <mat-card>
+        <mat-card-content>
+          <form class="form" action="index.html" method="post">
+            <table>
+              <tr>
+                <td>
+                  <mat-form-field class="">
+                    <mat-label>Name</mat-label>
+                    <input matInput class="" type="text" name="" value="" placeholder="{{sth}}">
+                  </mat-form-field>
 
-        <br>
-        <mat-form-field class="">
-          <mat-label>participantID</mat-label>
-          <input matInput class="" type="number" name="" value="" placeholder="{{sth}}">
-        </mat-form-field>
+                  <br>
+                  <mat-form-field class="">
+                    <mat-label>participantID</mat-label>
+                    <input matInput class="" type="number" name="" value="" placeholder="{{sth}}">
+                  </mat-form-field>
 
-        <br>
-        <mat-form-field class="">
-          <mat-label>position</mat-label>
-          <input matInput class="" type="text" name="" value="" placeholder="{{sth}}">
-        </mat-form-field>
+                  <br>
+                  <mat-form-field class="">
+                    <mat-label>nationality</mat-label>
+                    <input matInput class="" type="text" name="" value="" placeholder="{{sth}}">
+                  </mat-form-field>
 
-        <br>
-        <mat-form-field class="">
-          <mat-label>organization</mat-label>
-          <input matInput class="" type="text" name="" value="" placeholder="{{sth}}">
-        </mat-form-field>
+                  <br>
+                  <mat-form-field class="">
+                    <mat-label>speaking</mat-label>
+                    <input matInput class="" type="number" name="" value="" placeholder="{{sth}}">
+                  </mat-form-field>
 
-        <br>
-        <mat-form-field class="">
-          <mat-label>careerField</mat-label>
-          <input matInput class="" type="text" name="" value="" placeholder="{{sth}}">
-        </mat-form-field>
+                  <br>
+                  <mat-form-field class="">
+                    <mat-label>uuid</mat-label>
+                    <input matInput class="" type="text" name="" value="" placeholder="{{sth}}">
+                  </mat-form-field>
+                </td>
 
-        <br>
-        <mat-form-field class="">
-          <mat-label>nationality</mat-label>
-          <input matInput class="" type="text" name="" value="" placeholder="{{sth}}">
-        </mat-form-field>
+                <td>
+                  <mat-form-field class="">
+                    <mat-label>position</mat-label>
+                    <input matInput class="" type="text" name="" value="" placeholder="{{sth}}">
+                  </mat-form-field>
 
-        <br>
-        <mat-form-field class="">
-          <mat-label>speaking</mat-label>
-          <input matInput class="" type="number" name="" value="" placeholder="{{sth}}">
-        </mat-form-field>
+                  <br>
+                  <mat-form-field class="">
+                    <mat-label>organization</mat-label>
+                    <input matInput class="" type="text" name="" value="" placeholder="{{sth}}">
+                  </mat-form-field>
 
-        <br>
-        <mat-form-field class="">
-          <mat-label>uuid</mat-label>
-          <input matInput class="" type="text" name="" value="" placeholder="{{sth}}">
-        </mat-form-field>
+                  <br>
+                  <mat-form-field class="">
+                    <mat-label>careerField</mat-label>
+                    <input matInput class="" type="text" name="" value="" placeholder="{{sth}}">
+                  </mat-form-field>
 
-        <br>
-        <mat-form-field class="">
-          <mat-label>major</mat-label>
-          <input matInput class="" type="number" name="" value="" placeholder="{{sth}}">
-        </mat-form-field>
+                  <br>
+                  <mat-form-field class="">
+                    <mat-label>major</mat-label>
+                    <input matInput class="" type="number" name="" value="" placeholder="{{sth}}">
+                  </mat-form-field>
 
-        <br>
-        <mat-form-field class="">
-          <mat-label>minor</mat-label>
-          <input matInput class="" type="number" name="" value="" placeholder="{{sth}}">
-        </mat-form-field>
+                  <br>
+                  <mat-form-field class="">
+                    <mat-label>minor</mat-label>
+                    <input matInput class="" type="number" name="" value="" placeholder="{{sth}}">
+                  </mat-form-field>
+                </td>
+              </tr>
+            </table>
 
-        <br>
-        <mat-form-field class="">
-          <mat-label>minor</mat-label>
-          <input matInput class="" type="text" name="" value="" placeholder="{{sth}}">
-        </mat-form-field>
+            <br>
+            <mat-form-field class="">
+              <mat-label>remark</mat-label>
+              <input matInput class="" type="text" name="" value="" placeholder="{{sth}}">
+            </mat-form-field>
 
-        <br>
-        <mat-form-field class="">
-          <mat-label>remark</mat-label>
-          <input matInput class="" type="text" name="" value="" placeholder="{{sth}}">
-        </mat-form-field>
+            <!-- photo upload -->
 
-        <!-- photo upload -->
+            <!-- drag & drop container
 
-        <!-- drag & drop container
+              <div class="drop-container" ngFileDrop [options]="options" (uploadOutput)="onUploadOutput($event)" [uploadInput]="uploadInput" [ngClass]="{ 'is-drop-over': dragOver }">
+                <h1>D </h1>
+              </div>
+            -->
 
-          <div class="drop-container" ngFileDrop [options]="options" (uploadOutput)="onUploadOutput($event)" [uploadInput]="uploadInput" [ngClass]="{ 'is-drop-over': dragOver }">
-            <h1>D </h1>
-          </div>
-        -->
+            <br>
+            Avatar <br>
+            <label class="upload-button">
+              <input type="file" ngFileSelect [options]="options" (uploadOutput)="onUploadOutput($event)" [uploadInput]="uploadInput" multiple>
+              or choose file(s)
+            </label>
 
-        <br>
-        Avatar <br>
-        <label class="upload-button">
-          <input type="file" ngFileSelect [options]="options" (uploadOutput)="onUploadOutput($event)" [uploadInput]="uploadInput" multiple>
-          or choose file(s)
-        </label>
+            <button type="button" class="start-upload-btn" (click)="startUpload()">
+              Start Upload
+            </button>
 
-        <button type="button" class="start-upload-btn" (click)="startUpload()">
-          Start Upload
-        </button>
+            <!-- submit button -->
+            <br><br><br>
+            <button mat-raised-button  type="button" name="button" color="primary" [routerLink]="['/attendees']">Submit</button>
 
-        <!-- submit button -->
-        <br><br><br>
-        <button mat-raised-button  type="button" name="button" color="primary">Submit</button>
-
-      </form>
-    </mat-card-content>
-  </mat-card>
-</div>
+          </form>
+        </mat-card-content>
+      </mat-card>
+    </div>
+  </mat-sidenav-content>
+</mat-sidenav-container>
