--- a/src/app/pages/attendees/attendees.component.html
+++ b/src/app/pages/attendees/attendees.component.html
@@ -5,22 +5,22 @@
 <mat-sidenav-container class="sidenav-container">
   <mat-sidenav mode="side" opened class="sidenav">
     <div class="sidediv" >
-      <button mat-button class="sidebutton">home</button>
+      <button mat-button class="sidebutton" [routerLink]="['/home']">Home</button>
     </div>
     <div class="sidediv" >
-      <button mat-button class="sidebutton">Speaker</button>
+      <button mat-button class="sidebutton" [routerLink]="['/speaker']">Speaker</button>
     </div>
     <div class="sidediv" >
-      <button mat-raised-button color="primary" class="sidebutton">Attendees</button>
+      <button mat-raised-button color="primary" class="sidebutton" [routerLink]="['/attendees']">Attendees</button>
     </div>
     <div class="sidediv" >
-      <button mat-button class="sidebutton">Locations</button>
+      <button mat-button class="sidebutton" [routerLink]="['/map']">Locations</button>
     </div>
     <div class="sidediv" >
-      <button mat-button class="sidebutton">Sponsors</button>
+      <button mat-button class="sidebutton" [routerLink]="['/go-live']">Go Live</button>
     </div>
     <div class="sidediv" >
-      <button mat-button class="sidebutton">About</button>
+      <button mat-button class="sidebutton" [routerLink]="['/about']">About</button>
     </div>
   </mat-sidenav>
 
@@ -91,7 +91,7 @@
 
       <br><br><br>
 
-      <!-- Card view-->
+      <!-- Card view
       <div class="grid-content">
         <mat-card *ngFor="let attendee of attendeesList.attendees" class="card">
           <div class="img-center">
@@ -114,7 +114,7 @@
             </div>
           </mat-card-actions>
         </mat-card>
-      </div>
+      </div>-->
     </div>
   </mat-sidenav-content>
 </mat-sidenav-container>
