--- a/src/app/pages/speaker/speaker.component.html
+++ b/src/app/pages/speaker/speaker.component.html
@@ -1,6 +1,7 @@
 <app-toolbar [pageName] = "pageName"></app-toolbar>
 
 <mat-sidenav-container class="sidenav-container">
+  <!--Navigation Bar-->
   <mat-sidenav mode="side" opened class="sidenav">
     <div class="sidediv" >
       <button mat-button class="sidebutton" [routerLink]="['/home']">Home</button>
@@ -20,12 +21,34 @@
     <div class="sidediv" >
       <button mat-button class="sidebutton" [routerLink]="['/about']">About</button>
     </div>
-
   </mat-sidenav>
+
+  <!--Main Content-->
   <mat-sidenav-content class="sidenav-content">
-    speaker works!
-    <br><br><br><br><br><br><br><br>
-    <br><br><br><br><br><br><br><br>
-    <br><br><br><br><br><br><br><br>
+    <!--Check whether got anyone speaking-->
+    <mat-checkbox [(ngModel)]="speaking">someone speaking</mat-checkbox>
+    <!--someone speaking-->
+    <div class="page" *ngIf="speaking">
+      <button mat-raised-button (click)="toFullScreen()">Full Screen</button>
+      <mat-grid-list cols="1" rowHeight="2:1">
+        <mat-grid-tile>
+          <div class="content">
+            <img class="img" src={{avatar}}>
+            <h1>MICHELE ACUTO</h1>
+            <br>
+            <h3>Professor of Urban Politics</h3>
+            <h3>Melbourne School of Design</h3>
+          </div>
+        </mat-grid-tile>
+      </mat-grid-list>
+    </div>
+    <!--no one speaking-->
+    <div class="" *ngIf="!speaking">
+      <mat-grid-list cols="1" rowHeight="2:1">
+        <mat-grid-tile>
+          No One Speaking Now
+        </mat-grid-tile>
+      </mat-grid-list>
+    </div>
   </mat-sidenav-content>
 </mat-sidenav-container>
