--- a/src/app/pages/map/map.component.scss
+++ b/src/app/pages/map/map.component.scss
@@ -4,27 +4,55 @@
   left: 0;
   right: 0;
   bottom: 0;
+
 }
 
 .sidenav-container{
-  margin-top:3em;
   height:100%;
+
 }
 .sidenav{
-  width: 15em;
-  height: 100em;
-  background-color: inherit;
+  width: 9.5em;
+  // height: 100em;
+  background-color: #335C67;
   box-shadow: 0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12), 0 5px 5px -3px rgba(0, 0, 0, 0.3);
-
+  .navlogo{
+    color: #335C67;
+    display: flex;
+    background-color: white;
+    img{
+      margin: auto;
+    }
+    .navlogo-text{
+      line-height: 3em;
+      height: 3em;
+      color: #335C67;
+      text-align: center;
+      margin: auto;
+      font-weight: 700;
+    }
+  }
   .sidediv{
     height:4em;
     .sidebutton{
-      height: 70%;
-      margin-top: 2em;
+      color: white;
+      line-height: 4em;
       width: 100%;
     }
+    .chosenButton{
+      color: white;
+      line-height: 4em;
+      width: 100%;
+      background-color: #E69317;
+      }
+    }
+  .bottom-nav{
+    position: absolute;
+    bottom: 0;
+    display: flex;
+    flex-direction: column;
+    }
   }
-}
 .sidenav-content{
   margin-top:3em;
 }
