changed path of oages(home/speaker/attendees/locations)

--- a/src/app/pages/event-mgmt-page/event-mgmt-page.component.html
+++ b/src/app/pages/event-mgmt-page/event-mgmt-page.component.html
@@ -2,7 +2,11 @@
 <div class="page">
   <div class="grid" *ngIf="isGrid; else listView">
     <mat-card *ngFor="let event of items.events" class="card"  >
-      <i class="material-icons event-icon" (click)="onSelect($event)" id="{{event.id}}">event</i>
+      <i class="material-icons event-icon"
+         (click)="onSelect($event)"
+         id="{{event.id}}">
+         event
+       </i>
       <div class="event-title">{{event.name}}</div>
       <table class="content">
         <!-- <tr>
@@ -36,13 +40,13 @@
     <div class="list">
       <div class="search-btn">
         <div class="new-evnt-btn">
-            <button mat-raised-button color="primary"> + New Event</button>
+            <button mat-raised-button color="primary" [routerLink]="['/add-event']"> + New Event</button>
         </div>
       </div>
       <mat-table #table [dataSource]="dataSource">
         <ng-container matColumnDef="name">
           <mat-header-cell *matHeaderCellDef> Name </mat-header-cell>
-          <mat-cell *matCellDef="let element" [routerLink] = "['/home']"> {{element.name}} </mat-cell>
+          <mat-cell *matCellDef="let element"> Event {{element.id}} </mat-cell>
         </ng-container>
         <ng-container matColumnDef="date">
           <mat-header-cell *matHeaderCellDef> Date </mat-header-cell>
@@ -57,7 +61,9 @@
           <mat-cell *matCellDef="let element"> {{element.description}} </mat-cell>
         </ng-container>
         <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-        <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+        <mat-row *matRowDef="let row; columns: displayedColumns;"
+                 (click)='selectRow(row)'>
+        </mat-row>
       </mat-table>
     </div>
   </ng-template>
