--- a/src/app/pages/event-mgmt-page/event-mgmt-page.component.scss
+++ b/src/app/pages/event-mgmt-page/event-mgmt-page.component.scss
@@ -117,6 +117,9 @@
     overflow: auto;
     max-height: 500px;
     border: solid 1px gray;
+    .mat-row:hover{
+      background-color: #EEEEEE;
+    }
   }
 
 }
