--- a/src/app/pages/map/map.component.html
+++ b/src/app/pages/map/map.component.html
@@ -30,15 +30,15 @@
 
     <div class="bottom-nav">
       <button mat-button class="back-hint" [routerLink] = "['/event-mgmt']">
-        Manage Other Events?
+        Other Events
       </button>
-      <!-- <button mat-icon-button [matMenuTriggerFor]="menu">
+      <button mat-icon-button [matMenuTriggerFor]="menu">
         <mat-icon class="profile-icon">perm_identity</mat-icon>
       </button>
       <mat-menu #menu="matMenu" [overlapTrigger]="false">
         <button mat-menu-item [routerLink] = "['/change-pwd']">Change Password</button>
         <button mat-menu-item [routerLink] = "['/login']">Log out</button>
-      </mat-menu> -->
+      </mat-menu>
     </div>
 
   </mat-sidenav>
