--- a/src/app/pages/attendees/attendees.component.html
+++ b/src/app/pages/attendees/attendees.component.html
@@ -1,11 +1,17 @@
 <!-- Toolbar -->
-<app-toolbar [pageName] = "pageName"></app-toolbar>
+<!-- <app-toolbar [pageName] = "pageName"></app-toolbar> -->
 
 <!-- Navigation Bar -->
 <mat-sidenav-container class="sidenav-container">
   <mat-sidenav mode="side" opened class="sidenav">
+    <div class="navlogo">
+      <img src="assets/logo.png" width="40" height="30"/>
+      <div class="navlogo-text">
+        Smart Event
+      </div>
+    </div>
     <div class="sidediv" >
-      <button mat-button class="sidebutton" [routerLink]="['/',eventId,'home']">Home</button>
+      <button mat-button class="sidebutton" [routerLink]="['/',eventId,'home']">Dashboard</button>
     </div>
     <div class="sidediv" >
       <button mat-button class="sidebutton" [routerLink]="['/',eventId,'speaker']">Speaker</button>
@@ -22,6 +28,20 @@
     <div class="sidediv" >
       <button mat-button class="sidebutton" [routerLink]="['/',eventId,'about']">About</button>
     </div>
+
+    <div class="bottom-nav">
+      <button mat-button class="back-hint" [routerLink] = "['/event-mgmt']">
+        Other Events
+      </button>
+      <button mat-icon-button [matMenuTriggerFor]="menu">
+        <mat-icon class="profile-icon">perm_identity</mat-icon>
+      </button>
+      <mat-menu #menu="matMenu" [overlapTrigger]="false">
+        <button mat-menu-item [routerLink] = "['/change-pwd']">Change Password</button>
+        <button mat-menu-item [routerLink] = "['/login']">Log out</button>
+      </mat-menu>
+    </div>
+
   </mat-sidenav>
 
   <!-- main content -->
