--- a/src/app/pages/go-live-page/go-live-page.component.html
+++ b/src/app/pages/go-live-page/go-live-page.component.html
@@ -9,35 +9,35 @@
       </div>
     </div>
     <div class="sidediv" >
-      <button mat-button class="sidebutton" [routerLink]="['/home']">Dashboard</button>
+      <button mat-button class="sidebutton" [routerLink]="['/',eventId,'home']">Dashboard</button>
     </div>
     <div class="sidediv" >
-      <button mat-button class="sidebutton" [routerLink]="['/speaker']">Speaker</button>
+      <button mat-button class="sidebutton" [routerLink]="['/',eventId,'speaker']">Speaker</button>
     </div>
     <div class="sidediv" >
-      <button mat-button class="sidebutton" [routerLink]="['/attendees']">Attendees</button>
+      <button mat-button class="sidebutton" [routerLink]="['/',eventId,'attendees']">Attendees</button>
     </div>
     <div class="sidediv" >
-      <button mat-button class="sidebutton" [routerLink]="['/map']">Locations</button>
+      <button mat-button class="sidebutton" [routerLink]="['/',eventId,'map']">Locations</button>
     </div>
     <div class="sidediv" >
-      <button mat-raised-button class="chosenButton" [routerLink]="['/goLive']">Go Live</button>
+      <button mat-raised-button class="chosenButton" [routerLink]="['/',eventId,'goLive']">Go Live</button>
     </div>
     <div class="sidediv" >
-      <button mat-button class="sidebutton" [routerLink]="['/about']">Profile</button>
+      <button mat-button class="sidebutton" [routerLink]="['/',eventId,'about']">Profile</button>
     </div>
 
     <div class="bottom-nav">
       <button mat-button class="back-hint" [routerLink] = "['/event-mgmt']">
-        Manage Other Events?
+        Other Events
       </button>
-      <!-- <button mat-icon-button [matMenuTriggerFor]="menu">
+      <button mat-icon-button [matMenuTriggerFor]="menu">
         <mat-icon class="profile-icon">perm_identity</mat-icon>
       </button>
       <mat-menu #menu="matMenu" [overlapTrigger]="false">
         <button mat-menu-item [routerLink] = "['/change-pwd']">Change Password</button>
         <button mat-menu-item [routerLink] = "['/login']">Log out</button>
-      </mat-menu> -->
+      </mat-menu>
     </div>
 
   </mat-sidenav>
